# enum_tools

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  git_helper.yml  lint_roller.sh  make_conda_recipe.py  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tokenize_test.py  tox.ini
.ci/: actions_deploy_conda.sh  copy_pypi_2_github.py  travis_deploy_conda.sh
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  docs_test_action.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
artwork/: enum_tools.xcf  enum_tools_original.xcf
better_enum/: __init__.py  _constant.py  _custom_enums.py  _importer.py  autoenum.py  constant.py  custom_enums.py  decorator.py  importer.py  utils.py
doc-source/: Building.rst  Source.rst  autoenum.rst  conf.py  contributing.rst  demo.rst  docs.rst  index.rst  license.rst  requirements.txt
doc-source/_static/: style.css
doc-source/api/: autoenum.rst  custom_enums.rst  documentation.rst  index.rst  utils.rst
enum_tools/: __init__.py  _autodoc_typehints.py  autoenum.py  custom_enums.py  decorator.py  demo.py  documentation.py  utils.py
tests/: conftest.py  demo_classes.py  requirements.txt  test_aenum.py  test_autoenum.py  test_better_enum.py  test_documented_enum.py  test_enum.py  test_enum_bool.py  test_enum_iteration.py  test_enum_repr.py  test_enums.py  test_flags.py  test_floatenum.py  test_helpers.py  test_int_flags.py  test_intenum.py  test_namedconstant.py  test_namedtuple.py  test_order.py  test_strenum.py  test_unique.py  test_utils.py
tests/doc-test/test-root/: conf.py  flag.rst  index.rst  no-member-doc.rst
tests/test_autoenum/: test_flag_flag_html_.html  test_index_index_html_.html  test_no_member_doc_no_member_doc_html_.html
tests/test_autoenum_/: test_flag_flag_html_.html  test_index_index_html_.html  test_no_member_doc_no_member_doc_html_.html
