[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "enum_tools"
version = "0.6.4"
description = "Tools to expand Python's enum module."
readme = "README.rst"
keywords = [ "enum", "documentation", "sphinx", "sphinx-extension",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/enum_tools"
"Issue Tracker" = "https://github.com/domdfcoding/enum_tools/issues"
"Source Code" = "https://github.com/domdfcoding/enum_tools"
Documentation = "https://enum_tools.readthedocs.io/en/latest"

[project.optional-dependencies]
sphinx = [ "sphinx<3.4.0,>=3.0.3", "sphinx-toolbox>=1.2.0",]
all = [ "sphinx<3.4.0,>=3.0.3", "sphinx-toolbox>=1.2.0",]

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "LGPL-3.0-or-later"
additional-files = [ "recursive-include enum_tools/ requirements.txt", "recursive-exclude tests/ *", "prune tests*",]
