# coding: utf-8
# This file is managed by 'repo_helper'. Don't edit it directly.

[metadata]
name = enum_tools
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = GNU Lesser General Public License v3 or later (LGPLv3+)
keywords =
    enum
    documentation
    sphinx-extension
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms =
    Windows
    macOS
    Linux
url = https://github.com/domdfcoding/enum_tools
project_urls =
    Documentation = https://enum_tools.readthedocs.io
    Issue_Tracker = https://github.com/domdfcoding/enum_tools/issues
    Source_Code = https://github.com/domdfcoding/enum_tools
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed



[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:


[options.packages.find]
exclude =
    tests
    tests.*
    doc-source
